moved hello-webApp into its own directory