@@ -37,6 +37,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.29</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -49,7 +55,6 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -58,9 +63,6 @@
                 <version>0.0.4</version>
                 <configuration>
                     <mainClass>patterns.mvvm.TicTacToeDemo</mainClass>
-                    <options>
-                        <option>--enable-preview</option>
-                    </options>
                 </configuration>
             </plugin>
                 <!-- Jetty Plugin. Default port is 8080 -->
